# signal-aggregator

./: ARCHITECTURE.md  Cargo.toml  README.md  flake.nix  skills.md
examples/: canonical.nota
schema/: signal.schema
src/: lib.rs
tests/: channel.rs
