[package]
name         = "signal-aggregator"
version      = "0.3.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/signal-aggregator"
description  = "Signal contract for aggregator evidence collection."
publish      = false

[lib]
name = "signal_aggregator"
path = "src/lib.rs"

[features]
default = ["nota-text"]
nota-text = ["nota-text-query/nota-text", "signal-frame/nota-text"]

[dependencies]
nota            = { package = "nota", git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
nota-text-query = { git = "https://github.com/LiGoldragon/nota-text-query.git", branch = "main", default-features = false }
signal-frame    = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
rkyv            = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror       = "2"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
